--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.rrr</noscript>
+  <noscript>You need to enable JavaScript to run this app.rr</noscript>
   <div id="root"></div>
 </body>
 
