--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <title>React App</title>
+  <title>Hej på dig Viner!</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.rr</noscript>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
 
